# 3DBinPacking

./: .gitignore  3d-bin-packing.cbp  3d-bin-packing.depend  3d-bin-packing.layout  CMakeLists.txt  Cargo.h  Chromosome.h  JSON.cpp  Makefile  Point.h  README.md  com_haier_tms_jni_NativeAlgorithm.h  config.sh  main.cpp  repeat_test.sh  upload_to_customer_server.sh  upload_to_remote_server.sh  版本说明
test_suite/: test_data0.json  test_data1.json  test_data2.json  test_data3.json  test_data4.json  test_data5.json  test_data6.json  test_data7.json
